[gd_scene load_steps=10 format=2]

[ext_resource path="res://level/World.gd" type="Script" id=1]
[ext_resource path="res://Gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/GameOver.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/SoundTrackMain.mp3" type="AudioStream" id=4]

[sub_resource type="Environment" id=6]
background_mode = 4
glow_enabled = true
glow_levels/3 = false
glow_intensity = 1.4
glow_strength = 1.3
glow_bloom = 0.4
glow_hdr_threshold = 0.93
glow_hdr_luminance_cap = 7.91
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8202, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8262, 16.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.5, 8230.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 8223 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="Hud" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -5376
limit_top = -5376
limit_right = 5376
limit_bottom = 5376
editor_draw_limits = true

[node name="GameLimits" type="StaticBody2D" parent="."]

[node name="BottomLine" type="CollisionShape2D" parent="GameLimits"]
position = Vector2( 0, 5376 )
shape = SubResource( 2 )

[node name="TopLine" type="CollisionShape2D" parent="GameLimits"]
position = Vector2( -60, -5376 )
shape = SubResource( 3 )

[node name="LeftLine" type="CollisionShape2D" parent="GameLimits"]
modulate = Color( 0.988235, 0.0745098, 0.0745098, 1 )
position = Vector2( -5376, 28.5 )
shape = SubResource( 4 )

[node name="RightLine" type="CollisionShape2D" parent="GameLimits"]
modulate = Color( 0.988235, 0.0745098, 0.0745098, 1 )
position = Vector2( 5376, -21 )
shape = SubResource( 5 )

[node name="DoneTimer" type="Timer" parent="."]
wait_time = 30.2
one_shot = true
autostart = true

[node name="EndScreen" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="DoneTimer" to="." method="_on_DoneTimer_timeout"]
